<resources>
    <string name="app_name">Perhitungan Zakat Fitrah</string>
    <string name="zakat_intro">Zakat Fitrah di mana merupakan kewajiban yang harus dibayarkan oleh setiap umat muslim pada bulan Ramadan sebelum hari raya Idul Fitri.Adapun untuk zakat fitrah sendiri menunaikannya bisa dengan beras sebanyak 2,5 kg. Aplikasi ini disusun untuk memenuhi standar zakat Fitrah</string>
    <string name="harga_beras">Harga beras (kg)</string>
    <string name="total_jiwa">Total Jiwa (orang)</string>
    <string name="hitung">Hitung</string>
    <string name="harga_invalid">Harga tidak boleh kosong.</string>
    <string name="jiwa_invalid">Jiwa tidak boleh kosong.</string>
    <string name="reset">Reset</string>
    <string name="harga">Harga Zakat: %1$.1f</string>
    <string name="tentang_aplikasi_saya">%1$s</string>
    <string name="tuntunan_zakat">\nWaktu pengeluaran zakat fitrah dibagi menjadi 5\n

    \n1. Wajib, yaitu seseorang menemukan bagian dari bulan Ramadhan dan bagian dari bulan Syawal.\n

    \n2. Diutamakan, yaitu setalah terbit fajar pada pagi hari raya Idul Fitri sampai sebelum dilaksanakannya shalat Id. Lebih utama lagi ditunaikan setelah shalat fajar.\n

    \n3. Boleh, yaitu terhitung sejak memasuki awal bulan Ramadhan.\n

    \n4. Makruh, yaitu membayar zakat setelah shalat Ied sampai terbenamnya matahari.\n

    \n5. Haram, yaitu membayar zakat sehari setelah hari raya Idul Fitri tanpa adanya uzur (kendala yang dimaklumi).</string>
    <string name="tuntunan">Tuntunan Zakat</string>
    <string name="tentang_aplikasi">tentang aplikasi</string>
    <string name="Bagikan">Bagikan</string>
    <string name="Bagikan_template">%1$s</string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="histori">Histori</string>
    <string name="koneksi_error">Koneksi error</string>
    <string name="hasil_zakat_kamu">Hasil: %1$s</string>
    <string name="berapa_jiwa">Berapa Jiwa: %1$s</string>
    <string name="harga_per_kilo">Harga : %1$s</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="konfirmasi_hapus">Hapus semua histori</string>
    <string name="channel_name">Pengingat</string>
    <string name="channel_desc">Pengingat Zakat Fitrah</string>
    <string name="notif_title">Tunaikan Zakat Kamu</string>
    <string name="notif_text">Jangan lupa untuk bayar Zakat Fitrah selama bulan puasa yaa ^_^</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="konfirmasi_hapus_histori">Apakah kamu yakin ingin menghapus histori ini?</string>
</resources>