<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tanggalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="15 April 2022" />

    <TextView
        android:id="@+id/hasilTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@+id/tanggalTextView"
        app:layout_constraintTop_toBottomOf="@+id/hargaPerKilo"
        tools:text="@string/hasil_zakat_kamu" />

    <TextView
        android:id="@+id/dataTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/tanggalTextView"
        app:layout_constraintTop_toBottomOf="@+id/hasilTextView"
        tools:text="@string/berapa_jiwa" />

    <TextView
        android:id="@+id/hargaPerKilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/harga_per_kilo"
        app:layout_constraintStart_toStartOf="@+id/tanggalTextView"
        app:layout_constraintTop_toBottomOf="@+id/tanggalTextView"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/hapusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_baseline_delete_forever_24"
        app:tint="@color/white"
        android:backgroundTint="@color/teal_700"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@null"
        app:rippleColor="@color/white"
        tools:ignore="PrivateResource" />

</androidx.constraintlayout.widget.ConstraintLayout>